--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       </p>
       <!-- social-icons  -->
       <div class="social-icons">
-        <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#https://www.instagram.com/omkar___28"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="#https://www.linkedin.com/in/OmkarBhandari"><i class="bx bxl-linkedin-square"></i></a>
+        <a href="#href="https://github.com/omkar028" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="#https://www.instagram.com/omkar__28><i class="bx bxl-instagram-alt"></i></a>
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
       <!-- contact btn  -->
@@ -149,8 +149,8 @@
       </div>
       <div class="contact-icons">
         <a href="https://github.com/omkar028" target="_blank"><i class='bx bxl-github'></i></a>
-        <a href="#https://www.instagram.com/omkar___28" target="_blank"><i class="bx bxl-instagram-alt"></i></a>
-        <a href="https://www.linkedin.com/in/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="#https://www.instagram.com/omkar__28" target="_blank"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="https://www.linkedin.com/in/OmkarBhandari" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
 
