--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- social-icons  -->
       <div class="social-icons">
         <a href="#https://www.linkedin.com/in/OmkarBhandari"><i class="bx bxl-linkedin-square"></i></a>
-        <a href="#href="https://github.com/omkar028" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="#href="https://github.com/omkar028"><i class="bx bxl-github"></i></a>
         <a href="#https://www.instagram.com/omkar__28><i class="bx bxl-instagram-alt"></i></a>
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
@@ -149,7 +149,7 @@
       </div>
       <div class="contact-icons">
         <a href="https://github.com/omkar028" target="_blank"><i class='bx bxl-github'></i></a>
-        <a href="#https://www.instagram.com/omkar__28" target="_blank"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="#https://www.instagram.com/omkar__28"><i class="bx bxl-instagram-alt"></i></a>
         <a href="https://www.linkedin.com/in/OmkarBhandari" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
