--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="social-icons">
         <a href="#https://www.linkedin.com/in/OmkarBhandari"><i class="bx bxl-linkedin-square"></i></a>
         <a href="#href="https://github.com/omkar028"><i class="bx bxl-github"></i></a>
-        <a href="#https://www.instagram.com/omkar__28><i class="bx bxl-instagram-alt"></i></a>
+        <a href="#https://www.instagram.com/omkar__28"><i class="bx bxl-instagram-alt"></i></a>
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
       <!-- contact btn  -->
