--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </p>
       <!-- social-icons  -->
       <div class="social-icons">
-        <a href="#https://www.linkedin.com/in/omkar-bhandari-797b8728a"></i></a>
-        <a href="#href="https://github.com/omkar028"><i class="bx bxl-github"></i></a>
-        <a href="#https://www.instagram.com/omkar___28"><i class="bx bxl-instagram-alt"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#https://www.linkedin.com/in/omkar-bhandari-797b8728a" target="_blank"></i></a>
+        <a href="#href="https://github.com/omkar028"><i class="bx bxl-github" target="_blank"></i></a>
+        <a href="#https://www.instagram.com/omkar___28"><i class="bx bxl-instagram-alt" target="_blank"></i></a>
+        <a href="#" target="_blank"><i class="bx bxl-twitter"></i></a>
       </div>
       <!-- contact btn  -->
       <!-- <div class="contact-btn">
