--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
       <div class="contact-icons">
         <a href="https://github.com/omkar028" target="_blank"><i class='bx bxl-github'></i></a>
-        <a href="https://www.instagram.com/omkar__28"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="https://www.instagram.com/omkar___28"><i class="bx bxl-instagram-alt"></i></a>
         <a href="https://www.linkedin.com/in/omkar-bhandari-797b8728a" target="_blank"><i class="bx bxl-linkedin-square"></i></a>
 
       </div>
